@@ -6,7 +6,7 @@ AUX gentoo_ply.png 11884 RMD160 b6854064f2a6c94df51bcc8f0de03f2de3dde52d SHA1 93
 AUX plymouth.initd 402 RMD160 12174a38b36e741c962a7e33e037bbd04f2e7d75 SHA1 d9221a1b76bcba43dd51df565715b7c9c602a91d SHA256 81fdc6838c72b0ed3874e08aefd6e77a4f735ce406452120ee1d52b3196c1db8
 DIST plymouth-0.8.3.tar.bz2 763575 RMD160 bb5c13e4eb48d8b881a4d2cc15190c377430f672 SHA1 30135d3b2db42778b32b6d2d9e7e0da90f0da599 SHA256 2e51abbc087228f7910302334755d0190fc9e923eae9992150adb0f6cccc9077
 EBUILD plymouth-0.8.3-r3.ebuild 1476 RMD160 16c046082fad2146dbcd57b106c8877cbac75598 SHA1 62f435d291bb5d35732cf3afef690ac886cc7997 SHA256 08d3b2a572bdcbca2dbfe77434f906421299c33e010759ae8a82cf65ad7ca31e
-EBUILD plymouth-0.8.3-r4.ebuild 1992 RMD160 8923fd4c230fbceb0d23212aa481efe43d0ccb41 SHA1 2aaf303f523e757c83f80ff681cd72f6bce069e9 SHA256 e0a4ca6bb11e98f68add8805066c4faf23c57263685ddee754b0bde9a38c83d6
-EBUILD plymouth-9999.ebuild 1887 RMD160 4f84e1f3fbe8a11e2dde7aee3bedca5039e6de45 SHA1 b4877fe8d690d8e8d85f80373313fd1ead1ee9f7 SHA256 ed6a21a8dcab0bbb2c8d371da662650d00baebbf5315a967da34be4e1781b3dd
-MISC ChangeLog 2544 RMD160 dce54041b72a5848d9ba48c819c69718f0122ca2 SHA1 4648c93b58e467c648d54497cca33aaa6b0a81b0 SHA256 6b2a1a41765f05a7692b1de6ddb8272ce9d62c754184e29559c0048b53525e59
+EBUILD plymouth-0.8.3-r4.ebuild 2017 RMD160 97e529b2994e6dd89de9fbdca9df6a420a113318 SHA1 45e5eeee58927dae8416b4680bdf62eb05838791 SHA256 b7995035a268010225c42b55695a5498f75a12d06768c8e7e2b6bce0082dd041
+EBUILD plymouth-9999.ebuild 1912 RMD160 2d7745bef4af19cd138b9ba40326d37999b1b907 SHA1 765745e33445a9fa7336a9a9358adbd7e628a494 SHA256 3dd0ade04b20d180a013f661f766be344bba78dae7baa353572ec136d3553bb6
+MISC ChangeLog 2796 RMD160 5513c672e22b6fef7fd413440c071fa7c3141ced SHA1 2e38349711db8b4f958d3220621d0462cfee0f8a SHA256 e25ce64aedc7b008143c2146c26e6c6815b8ab45a19bd63e9f71626c548e509a
 MISC metadata.xml 1051 RMD160 97214658a47faf8fc63e38b4d423979345dd281e SHA1 84c1722a770c01066f78e45b07d46af9f36cb65e SHA256 3d7d850b76cdb158d1a5ed6385a8c0771687d10ba50401e4dce4906a3b96ed16
